# Q

./: .gitmodules  CMakeLists.txt
preprocessing/: CMakeLists.txt
preprocessing/flexcat/: CMakeLists.txt  argument_parser.h  flexlib.cpp  ptc.h  read_writer.h
preprocessing/nexcat/: CMakeLists.txt  nexcat.cpp
src/: CMakeLists.txt  Q_GetFragLength.cpp  Q_ParseCommandLine.cpp  Q_ReadInFiles.cpp  Q_WriteResults.cpp
